--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,5 +5,8 @@ body {
   /* background: rgba(red, green, blue, 0.5); */
 }
 
+#loginComponent {
+  transition: flex-direction 10s ease-in-out;
+}
 
 
